--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tribute Page</title>
+</head>
+<body>
+    <center><H1>SUBHASH CHANDRA BOSE</H1></center>
+    <center><img src="sc bose.jpg"></center>
+    <hr>
+    <h3>Who was Netaji Subhash Chandra Bose</h3>
+    <p>Subhas Chandra Bose ( 23 January 1897 - 18 August 1945 ) was an Indian nationalist whose defiance of British authority in India made him a hero among Indians, The Netaji was first applied to Bose in Germany in early 1942—by the Indian soldiers of the Indische Legion and by the German and Indian officials in the Special Bureau for India in Berlin. It is now used throughout India</p>
+    <br>
+    <br>
+    <h3>How he played a vital role in India's freedom struggle</h3>
+    <p>Subhas Bose was born into wealth and privilege in a large Bengali family in Orissa during the British Raj. The early recipient of an Anglocentric education, he was sent after college to England to take the Indian Civil Service examination. He succeeded with distinction in the vital first exam but demurred at taking the routine final exam, citing nationalism to be a higher calling. Returning to India in 1921, Bose joined the nationalist movement led by Mahatma Gandhi and the Indian National Congress. He followed Jawaharlal Nehru to leadership in a group within the Congress which was less keen on constitutional reform and more open to socialism.[v] Bose became Congress president in 1938. After reelection in 1939, differences arose between him and the Congress leaders, including Gandhi, over the future federation of British India and princely states, but also because discomfort had grown among the Congress leadership over Bose's negotiable attitude to non-violence, and his plans for greater powers for himself.[32] After the large majority of the Congress Working Committee members resigned in protest,[33] Bose resigned as president and was eventually ousted from the party.[34][35][36]
 
+        In April 1941 Bose arrived in Nazi Germany, where the leadership offered unexpected but equivocal sympathy for India's independence.[37][38] German funds were employed to open a Free India Centre in Berlin. A 3,000-strong Free India Legion was recruited from among Indian POWs captured by Erwin Rommel's Afrika Korps to serve under Bose.[39][w] Although peripheral to their main goals, the Germans inconclusively considered a land invasion of India throughout 1941. By the spring of 1942, the German army was mired in Russia and Bose became keen to move to southeast Asia, where Japan had just won quick victories.[41] Adolf Hitler during his only meeting with Bose in late May 1942 offered to arrange a submarine.[42] During this time, Bose became a father; his wife,[6][x] or companion,[43][y] Emilie Schenkl, gave birth to a baby girl.[6][z][37] Identifying strongly with the Axis powers, Bose boarded a German submarine in February 1943.[44][45] Off Madagascar, he was transferred to a Japanese submarine from which he disembarked in Japanese-held Sumatra in May 1943.[44]
+        
+        With Japanese support, Bose revamped the Indian National Army (INA), which comprised Indian prisoners of war of the Indian Army who had been captured by the Japanese in the Battle of Singapore.[46][47][48] A Provisional Government of Free India was declared on the Japanese-occupied Andaman and Nicobar Islands and was nominally presided by Bose.[49][2][aa] Although Bose was unusually driven and charismatic, the Japanese considered him to be militarily unskilled,[ab] and his soldierly effort was short-lived. In late 1944 and early 1945, the Indian Army reversed the Japanese attack on India. Almost half the Japanese forces and the participating INA contingent were killed.[ac][ad] The remaining INA was driven down the Malay Peninsula and surrendered with the recapture of Singapore. Bose chose to escape to Manchuria to seek a future in the Soviet Union which he believed to have turned anti-British. He died from third-degree burns received when his overloaded plane crashed in Japanese Taiwan on August 18, 1945.[ae] Some Indians did not believe that the crash had occurred,[af] expecting Bose to return to secure India's independence.[ag][ah][ai] The Indian National Congress, the main instrument of Indian nationalism, praised Bose's patriotism but distanced itself from his tactics and ideology</p>
+
+    <h3>His Legacy</h3>    
+    <p>Bose was featured on the stamps in India from 1964, 1993, 1997, 2001, 2016, 2018 and 2021.[156] Bose was also featured in ₹2 coins in 1996 and 1997, ₹75 coin in 2018 and ₹125 coin in 2021.[157][158][159] Netaji Subhas Chandra Bose International Airport at Kolkata, Netaji Subhash Chandra Bose Island, formerly Ross Island and many other institutions in India are named after him.</p>
+    <center><img src="279px-Subhas_Chandra_Bose_1964_stamp_of_India_2.jpg"><img src="Subhas_Chandra_Bose_1964_stamp_of_India.jpg"></center>
+</body>
+</html>
