--- a/index.html
+++ b/index.html
@@ -24,5 +24,11 @@
     <h3>His Legacy</h3>    
     <p>Bose was featured on the stamps in India from 1964, 1993, 1997, 2001, 2016, 2018 and 2021.[156] Bose was also featured in ₹2 coins in 1996 and 1997, ₹75 coin in 2018 and ₹125 coin in 2021.[157][158][159] Netaji Subhas Chandra Bose International Airport at Kolkata, Netaji Subhash Chandra Bose Island, formerly Ross Island and many other institutions in India are named after him.</p>
     <center><img src="279px-Subhas_Chandra_Bose_1964_stamp_of_India_2.jpg"><img src="Subhas_Chandra_Bose_1964_stamp_of_India.jpg"></center>
+<br>
+<hr>
+<h2>Reffernces</h2>
+<ul>
+<li><a href="http://https://en.wikipedia.org/wiki/Subhas_Chandra_Bose#Legacy">wikipedia</a></li>
+</ul>
 </body>
 </html>
