--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tribute Page</title>
+    <style>
+        h1{background-color: coral;}
+        h3{background-color: greenyellow;}
+    </style>
 </head>
 <body>
     <center><H1>SUBHASH CHANDRA BOSE</H1></center>
@@ -23,7 +27,8 @@
 
     <h3>His Legacy</h3>    
     <p>Bose was featured on the stamps in India from 1964, 1993, 1997, 2001, 2016, 2018 and 2021.[156] Bose was also featured in ₹2 coins in 1996 and 1997, ₹75 coin in 2018 and ₹125 coin in 2021.[157][158][159] Netaji Subhas Chandra Bose International Airport at Kolkata, Netaji Subhash Chandra Bose Island, formerly Ross Island and many other institutions in India are named after him.</p>
-    <center><img src="279px-Subhas_Chandra_Bose_1964_stamp_of_India_2.jpg"><img src="Subhas_Chandra_Bose_1964_stamp_of_India.jpg"></center>
+    <center><img src="279px-Subhas_Chandra_Bose_1964_stamp_of_India_2.jpg"></center>
+    <center><img src="Subhas_Chandra_Bose_1964_stamp_of_India.jpg"></center>
 <br>
 <hr>
 <h2>Reffernces</h2>
